--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "next": "^15.2.4",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-modal": "^3.16.3"
+    "react-modal": "^3.16.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
